# realtime-speech

./: .gitignore  README.md  pyproject.toml  run_asr.sh
asr_service/: __init__.py  app.py  asr.py  audio.py  cli.py  config.py  session.py  vad.py
samples/: README.md
tests/: test_asr.py  test_audio.py  test_session.py  test_vad.py
web/: index.html
